--- a/ecommerce-frontend/src/styles/navbar.css
+++ b/ecommerce-frontend/src/styles/navbar.css
@@ -3,12 +3,19 @@
     justify-content: space-between;
     background-color: rgba(245, 245, 245, 0.967);
     width: 100%;
+    height: 3rem;
 }
 
 nav {
     
     display: flex;
     text-align: end;
+}
+
+.AjoutProduit {
+    color: whitesmoke;
+    background-color: rgb(255, 145, 0);
+    border-radius: 30px;
 }
 
 nav a {
@@ -22,8 +29,11 @@ nav a {
 .search {
     margin-right: 5%;
     margin-top: 1%;
-    border-color: black;
 }
 
-
+.search input {
+    border-radius: 10px;
+    width: 100%;
+    height: 30px;
+}
 
