--- a/ecommerce-frontend/src/styles/productcard.css
+++ b/ecommerce-frontend/src/styles/productcard.css
@@ -3,12 +3,14 @@
 
 .productcard {
     background-color: bisque;
-    width: 35%;
+    width: 45%;
     margin-left: 20%;
     border-radius: 20px;
+    height: auto;
 }
 
 .image {
     display: flex;
     justify-content: center;
+    width: 80%;
 }
