--- a/ecommerce-frontend/src/styles/navbar.css
+++ b/ecommerce-frontend/src/styles/navbar.css
@@ -6,23 +6,30 @@
     height: 3rem;
 }
 
-nav {
-    
+nav { 
     display: flex;
     text-align: end;
 }
+
+.nav Link {
+    margin-top: 10px;
+}
+
 
 .AjoutProduit {
     color: whitesmoke;
     background-color: rgb(255, 145, 0);
     border-radius: 30px;
+    margin-bottom: 10px;
+    
 }
 
 nav a {
     color: orangered;
     margin-left: 10px;
+    margin-top: 10px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 900;
 }
 
@@ -35,5 +42,5 @@ nav a {
     border-radius: 10px;
     width: 100%;
     height: 30px;
-}
+}    
 
