--- a/ecommerce-frontend/src/styles/navbar.css
+++ b/ecommerce-frontend/src/styles/navbar.css
@@ -1,4 +1,7 @@
 .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -19,7 +22,7 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    width: 60%;
+    width: 30%;
     
 }
 
