--- a/ecommerce-frontend/src/styles/productcard.css
+++ b/ecommerce-frontend/src/styles/productcard.css
@@ -2,15 +2,49 @@
 
 
 .productcard {
-    background-color: bisque;
+    background-color: rgb(225, 221, 217);
     width: 45%;
-    margin-left: 20%;
     border-radius: 20px;
     height: auto;
+    border: 1px solid black;
+    box-sizing: border-box;
+    color: black;
 }
 
-.image {
+.profil {
     display: flex;
-    justify-content: center;
-    width: 80%;
+    flex-direction: row;
+}
+
+.profil img {
+    border-radius: 100px;
+    max-height: 2rem;
+    border: 2px solid black;
+}
+
+
+.productcard h5 { 
+    color: black;
+}
+
+.productcard h1 {
+    color: black;
+}
+  
+
+button {
+  padding: 0.5rem;
+  border-radius: 8px;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+
+.boutons {
+  background-color: orange;
+  display: flex;
+  border: 2px solid black;
+  border-radius: 20px;
+  gap: 0.5rem;
+  flex-wrap: wrap;
 }
