--- a/ecommerce-frontend/src/styles/productdetail.css
+++ b/ecommerce-frontend/src/styles/productdetail.css
@@ -1,5 +1,31 @@
 
 
 .conteneur-productdetail {
-    height: 90vh;
+    margin: 0 auto;
+    padding: 1rem;
+}
+
+.slide-image {
+    height: 25rem; 
+    width: auto;   
+    max-width: 100%;
+    object-fit: contain;
+    border-radius: 12px;
+    border: 2px solid orangered;
+    display: block;
+    margin: auto;
+}
+
+
+
+
+.produit{
+    min-height: 80vh;
+    display: block;
+    
+}
+
+.section-commentaire {
+    min-height: 40vh;
+    background-color: rgb(249, 207, 129);
 }
